# repolist

./: README.md  pyproject.toml  requirements.txt
repolist/: cli.py  repolist.py
tests/: test_repolist.py
